<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ima"
        android:layout_marginTop="10dp"
        android:id="@+id/image1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="@string/main"
        android:layout_below="@id/image1"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:text="@string/login"
        android:layout_below="@id/text1"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20dp"
        android:layout_below="@id/text2"
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:background="@drawable/editview"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textSize="20dp"
        android:inputType="textPassword"
        android:layout_below="@id/email"
        android:id="@+id/pass"
        android:background="@drawable/editview"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/green"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="20dp"
        android:id="@+id/text3"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_log"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_sign"
        android:text="@string/signup"
        android:textSize="15dp"
        android:layout_below="@id/text3"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"/>

</RelativeLayout>