<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#61C7F1EB">
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ima"
        android:layout_marginTop="50dp"
        android:id="@+id/image1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:text="@string/main"
        android:layout_below="@id/image1"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button"
        android:text="@string/signup"
        android:textSize="20sp" />
</RelativeLayout>